alignment fixes

--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -10,3 +10,7 @@ html {
         text-shadow: 0 0 5px rgba(0, 255, 255, 0.6), 0 0 10px rgba(0, 255, 255, 0.6);
     }
     }
+
+    body{
+        overflow-x:hidden
+    }
